fb-mainnet/ckb-mainnet/michi-ckb-mainnet-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: michi-ckb-mainnet
  namespace: michi
spec:
  selector:
    matchLabels:
      app: michi-ckb-mainnet
  serviceName: "ckb-mainnet"
  replicas: 1
  template:
    metadata:
      labels:
        app: michi-ckb-mainnet
        #logging: "true"
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: michi-ckb-mainnet
        image: "nervos/perkins-tent:v0.101.6"
        ports:
          - name: rpc
            containerPort: 9115
            protocol: "TCP"
        volumeMounts:
          - name: michi-ckb-data
            mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: michi-ckb-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp2
      resources:
        requests:
          storage: 100Gi
