fb-mainnet/ckb-mainnet/michi-ckb-mainnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: michi-ckb-mainnet-svc
  namespace: michi
  labels:
    app: michi-ckb-mainnet-svc
spec:
  ports:
  - name: rpc
    port: 8114
    targetPort: 9115
    protocol: TCP
  type: ClusterIP
  selector:
    app: michi-ckb-mainnet-2
