fb-mainnet/ckb-mainnet/michi-ckb-mainnet-ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: michi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-michi-ckb-mainnet-2
spec:
  rules:
  - host: mainnet-rpc.force-bridge.com
    http:
      paths:
      - path: /
        backend:
          serviceName: michi-ckb-mainnet-svc
          servicePort: 8114
