fb-mainnet/ckb-mainnet/michi-ckb-mainnet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: michi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-michi-ckb-mainnet
spec:
  rules:
  - host: mainnet-rpc.forcebridge.com
    http:
      paths:
      - path: /
        backend:
          serviceName: michi-ckb-mainnet-svc
          servicePort: 8114
